# screen_space_refractions_thesis

./: .gitignore  CMakeLists.txt  README.md  SHORT_TERM_TODO.md
resources/models/: blank.mtl
resources/shaders/: refraction.frag.spv  shader.frag.spv  shader.vert.spv  simple_skybox.frag.spv  simple_skybox.vert.spv  sky_shader.vert.spv  sky_shader_refraction.frag.spv  transparency.frag.spv  transparency.vert.spv
src/: config.cpp  config.h  main.cpp  my_imgui_config.h  preprocessor.cpp  renderer.cpp
src/common/: common_definitions.h
src/control/: app.cpp  app.h  logging.cpp  logging.h
src/model/: scene.cpp  scene.h  vertex_menagerie.cpp  vertex_menagerie.h
src/preprocessing/: preprocessing_common.cpp  preprocessing_common.h  sphere_preprocessing.cpp
src/shaders/: compile_shaders.py  model.vert  refraction.frag  shader.frag  shader.vert  simple_skybox.frag  simple_skybox.vert  sky_shader.frag  sky_shader.vert  sky_shader_refraction.frag  transparency.frag  transparency.vert
src/view/: camera.cpp  camera.h  engine.cpp  engine.h
src/view/vkImage/: cubemap.cpp  cubemap.h  image.cpp  image.h  texture.cpp  texture.h
src/view/vkInit/: commands.h  descriptors.cpp  descriptors.h  device.h  framebuffer.h  instance.h  pipeline.cpp  pipeline.h  swapchain.h  sync.h
src/view/vkJob/: job.cpp  job.h  worker_thread.cpp  worker_thread.h
src/view/vkMesh/: mesh.h  obj_mesh.cpp  obj_mesh.h
src/view/vkUtil/: frame.cpp  frame.h  memory.cpp  memory.h  queue_families.h  render_structs.h  shaders.cpp  shaders.h  single_time_commands.cpp  single_time_commands.h
